# flask-mailjet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/flask_mailjet/: __init__.py  loader.py  mailjet.py
src/flask_mailjet/templates/mailjet/: base.html
tests/: test_basic.py  test_templates.py
