[project]
name = "flask-mailjet"
version = "0.1.1"
description = "A Flask extension for sending emails via Mailjet API."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Tim Kadlec", email = "tim@mwq.cz" }
]
license = { file = "LICENSE" }

dependencies = [
    "build>=1.2.2.post1",
    "flask>=2.0",
    "mailjet-rest>=1.3.4",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
