[project]
name = "flask-mailjet"
version = "0.1.5"
description = "A Flask extension for sending emails via the Mailjet API."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Tim Kadlec", email = "tim@mwq.cz" }
]
license = { text = "MIT" }

dependencies = [
    "flask>=2.0",
    "mailjet-rest>=1.3.4",
]

keywords = ["flask", "mailjet", "email", "api", "extension"]
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flask_mailjet = ["templates/**/*"]
